name:                hatinhrunners
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://hatinhrunners.com
license:             BSD3
license-file:        LICENSE
author:              lk
maintainer:          lk@nghienchaybo.com
copyright:           2023 lk@nghienchaybo.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

executable hatinhrunners
  main-is:             site.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hakyll
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
