name:                hatinhrunners
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://hatinhrunners.com
license:             BSD3
license-file:        LICENSE
author:              lk
maintainer:          lk@nghienchaybo.com
copyright:           2023 lk@nghienchaybo.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

executable hatinhrunners
  main-is:             Site.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base        >= 4.7 && < 5
                      , hakyll
                      , containers >= 0.5.5
                      , regex-tdfa >= 1.2
                      , array      >= 0.5
                      , process    >= 1.2
                      , directory  >= 1.2
                      , filepath   >= 1.3
                      , time       >= 1.4
                      , old-locale >= 1.0
                      , xml        >= 1.3
                      , data-default-class
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
